--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="mockup-phone">
             <div class="camera"></div>
             <div class="display">
-                <div class="artboard artboard-demo phone-1">
+                <div class="artboard artboard-demo phone-2">
                     <!-- login section -->
                     <div class="hero bg-base-200 min-h-screen">
                         <div class="hero-content flex-col lg:flex-row-reverse">
@@ -30,7 +30,7 @@
                                 <label class="label">
                                   <span class="label-text">Pin</span>
                                 </label>
-                                <input type="password" autocomplete="off" placeholder="Your Pin" class="input input-bordered" required />
+                                <input id="pin-number" type="password" autocomplete="off" placeholder="Your Pin" class="input input-bordered" required />
                                 <label class="label">
                                   <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
                                 </label>
